# BOM-AI-Hackathon

./: .gitignore  AGENTS.md  README.md
data/: sitemap.json
teams/team5/backend/: .dockerignore  Dockerfile  config.py  intake.py  intake_graph.py  main.py  models.py  orchestrator.py  paths.py  pyproject.toml  session_store.py
teams/team5/backend/connectors/: base.py  cancer_atlas.py  embeddings.py  kanker_nl.py  nkr_cijfers.py  publications.py
teams/team5/backend/ingestion/: sitemap_builder.py  vectorize.py
teams/team5/backend/mock_bedrock_probe/: __init__.py  probe.py
teams/team5/backend/tests/: test_api.py  test_intake.py  test_intake_graph.py  test_models.py  test_orchestrator.py  test_paths.py
teams/team5/backend/tests/ab_chunking/: __init__.py  chunkers.py  harness.py  judge.py  metrics.py  preprocess.py  queries.json  report.py  run.py
teams/team5/backend/tests/ab_chunking/results/: kanker_nl_report.md
teams/team5/backend/tests/test_connectors/: test_cancer_atlas.py  test_kanker_nl.py  test_nkr_cijfers.py  test_publications.py
teams/team5/backend/tests/test_ingestion/: test_vectorize.py
teams/team_7/backend/: .env.example  .gitignore  =1.1.0  build_vectorstore.py  config.py  conversation.py  list_models.py  llm.py  main.py  model_info.py  pyproject.toml  requirements.txt  vectorstore.py
teams/team_7/backend/audio/: __init__.py  microphone.py  playback.py
teams/team_7/backend/speech_to_text/: __init__.py  __main__.py  config.py  stream.py  whisper_service.py
teams/team_7/backend/text_to_speech/: __init__.py  config.py  polly_service.py
(+156 files in other folders)
